syntax = "proto3";

package fileset;
option go_package = "github.com/pachyderm/pachyderm/v2/src/internal/storage/fileset";

import "internal/storage/fileset/index/index.proto";

message Metadata {
  oneof value {
    Primitive primitive = 1;
    Composite composite = 2;
  }
}

message Composite {
  repeated string layers = 1;
}

message Primitive {
  index.Index deletive = 1;
  index.Index additive = 2;
  int64 size_bytes = 3;
}

message TestCacheValue {
  string file_set_id = 1;
}
